--- a/index.html
+++ b/index.html
@@ -6,110 +6,110 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Survey-Form</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
         integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-
-<body><form>
-    <div style="background-color: black; padding-left:320px; padding-top:50px; padding-bottom:50px;">
-        <div style="background-color: white; border:3px; width:800px; height:900px; padding-left:15px; padding-right:15px; "><br>
-            <label for="name"><b>Name</b><span class="main">*</span></label><br>
-            <input type="text" name="" value="" id="name">
-            <span style="padding-right:10px;"></span>
-            <input type="text" name="" value="" id="name"><br>
-            <text>First</text><span style="padding-right:172px;"></span><text>Last</text><br><br>
-            <label for="email"><b>Email</b><span class="main">*</span></label><br>
-            <input type="email" name="" id="email"><br><br>
-            <label for="experience"><b>Your Experience</b><span class="main">*</span></label><br>
-            <div class="color" style="padding-top:5px;">
-                <i class="fa fa-star fa-2x" aria-hidden="true" style="padding-right:5px;"></i>
-                <i class="fa fa-star fa-2x" aria-hidden="true" style="padding-right:5px;"></i>
-                <i class="fa fa-star fa-2x" aria-hidden="true" style="padding-right:5px;"></i>
-                <i class="fa fa-star fa-2x" aria-hidden="true" style="padding-right:5px;"></i>
-                <i class="fa fa-star fa-2x" aria-hidden="true"></i>
+<body>
+    <div class="container" style=" width:100%; padding-left:200px; padding-top:50px; padding-bottom:50px;">
+        <div class="row"
+            style="background-color: white; border:3px; width:750px; height:950px; padding-left:15px; padding-right:15px; ">
+            <br>
+            <div class="col-lg-12"><br>
+                <label for="name"><b>Name</b><span class="main">*</span></label><br>
+                <input type="text" name="" value="" id="name">
+                <span style="padding-right:10px;"></span>
+                <input type="text" name="" value="" id="name"><br>
+                <text>First</text><span style="padding-right:172px; "></span><text>Last</text><br>
+                <label for="email" style="padding-top:10px;"><b>Email</b><span class="main">*</span></label><br>
+                <input type="email" name="" id="email" style="padding-right:200px;"><br><br>
+                <label for="experience"><b>Your Experience</b><span class="main">*</span></label><br>
+                <div class="color" style="padding-top:5px;">
+                    <i class="fa fa-star fa-2x" aria-hidden="true" style="padding-right:5px;"></i>
+                    <i class="fa fa-star fa-2x" aria-hidden="true" style="padding-right:5px;"></i>
+                    <i class="fa fa-star fa-2x" aria-hidden="true" style="padding-right:5px;"></i>
+                    <i class="fa fa-star fa-2x" aria-hidden="true" style="padding-right:5px;"></i>
+                    <i class="fa fa-star fa-2x" aria-hidden="true"></i>
+                </div>
+                <p>Overall,How would you rate your experience with us?</p>
+                <b>How satisfied are you with</b><span class="main">*</span>
+                <table width="100%" height="120px">
+                    <tr>
+                        <td></td>
+                        <td>Very Unsatisfied</td>
+                        <td>Unsatisfied</td>
+                        <td>Neutral</td>
+                        <td>Satisfied</td>
+                        <td>Very Satisfied</td>
+                    </tr>
+                    <tr>
+                        <td>Purchase</td>
+                        <td><i class="fa fa-circle-thin " aria-hidden="true"></i></td>
+                        <td><i class="fa fa-circle-thin " aria-hidden="true"></i></td>
+                        <td><i class="fa fa-circle-thin" aria-hidden="true"></i></td>
+                        <td><i class="fa fa-circle-thin" aria-hidden="true"></i></td>
+                        <td><i class="fa fa-circle-thin" aria-hidden="true"></i></td>
+                    </tr>
+                    <tr>
+                        <td>service</td>
+                        <td><i class="fa fa-circle-thin" aria-hidden="true"></i></td>
+                        <td><i class="fa fa-circle-thin" aria-hidden="true"></i></td>
+                        <td><i class="fa fa-circle-thin" aria-hidden="true"></i></td>
+                        <td><i class="fa fa-circle-thin" aria-hidden="true"></i></td>
+                        <td><i class="fa fa-circle-thin" aria-hidden="true"></i></td>
+                    </tr>
+                    <tr>
+                        <td>Company Overall</td>
+                        <td><i class="fa fa-circle-thin" aria-hidden="true"></i></td>
+                        <td><i class="fa fa-circle-thin" aria-hidden="true"></i></td>
+                        <td><i class="fa fa-circle-thin" aria-hidden="true"></i></td>
+                        <td><i class="fa fa-circle-thin" aria-hidden="true"></i></td>
+                        <td><i class="fa fa-circle-thin" aria-hidden="true"></i></td>
+                    </tr>
+                </table><br>
+                <b>How likely are you to</b><span class="main">*</span>
+                <table width="100%" height="120px">
+                    <tr>
+                        <td></td>
+                        <td>Very Unlikely</td>
+                        <td>Unlikely</td>
+                        <td>Neutral</td>
+                        <td>Likely</td>
+                        <td>Very Likely</td>
+                    </tr>
+                    <tr>
+                        <td style="padding:5px;">Buy from us again</td>
+                        <td><i class="fa fa-circle-thin" aria-hidden="true"></i></td>
+                        <td><i class="fa fa-circle-thin" aria-hidden="true"></i></td>
+                        <td><i class="fa fa-circle-thin" aria-hidden="true"></i></td>
+                        <td><i class="fa fa-circle-thin" aria-hidden="true"></i></td>
+                        <td><i class="fa fa-circle-thin" aria-hidden="true"></i></td>
+                    </tr>
+                    <tr>
+                        <td>Recommend our<br> products to others</td>
+                        <td><i class="fa fa-circle-thin" aria-hidden="true"></i></td>
+                        <td><i class="fa fa-circle-thin" aria-hidden="true"></i></td>
+                        <td><i class="fa fa-circle-thin" aria-hidden="true"></i></td>
+                        <td><i class="fa fa-circle-thin" aria-hidden="true"></i></td>
+                        <td><i class="fa fa-circle-thin" aria-hidden="true"></i></td>
+                    </tr>
+                    <tr>
+                        <td>Recommend our<br> Company to others</td>
+                        <td><i class="fa fa-circle-thin" aria-hidden="true"></i></td>
+                        <td><i class="fa fa-circle-thin" aria-hidden="true"></i></td>
+                        <td><i class="fa fa-circle-thin" aria-hidden="true"></i></td>
+                        <td><i class="fa fa-circle-thin" aria-hidden="true"></i></td>
+                        <td><i class="fa fa-circle-thin" aria-hidden="true"></i></td>
+                    </tr>
+                </table><br>
+                <b>Additional comments or suggestions</b><br>
+                <textarea></textarea><br><br>
+                <input type="button" value="Submit"
+                    style="padding-left:15px; padding-top:10px;padding-right:15px; padding-bottom:10px; border-color:gainsboro">
             </div>
-            <p>Overall,How would you rate your experience with us?</p>
-            <b>How satisfied are you with</b><span class="main">*</span>
-            <table width="100%" height="120px">
-                <tr>
-                    <td></td>
-                    <td>Very Unsatisfied</td>
-                    <td>Unsatisfied</td>
-                    <td>Neutral</td>
-                    <td>Satisfied</td>
-                    <td>Very Satisfied</td>
-                </tr>
-                <tr>
-                    <td>Purchase</td>
-                    <td><i class="fa fa-circle-o" aria-hidden="true" ></i></td>
-                    <td><i class="fa fa-circle-o" aria-hidden="true" ></i></td>
-                    <td><i class="fa fa-circle-o" aria-hidden="true" ></i></td>
-                    <td><i class="fa fa-circle-o" aria-hidden="true" ></i></td>
-                    <td><i class="fa fa-circle-o" aria-hidden="true" ></i></td>
-                </tr>
-                <tr>
-                    <td>service</td>
-                    <td><i class="fa fa-circle-o" aria-hidden="true" ></i></td>
-                    <td><i class="fa fa-circle-o" aria-hidden="true" ></i></td>
-                    <td><i class="fa fa-circle-o" aria-hidden="true" ></i></td>
-                    <td><i class="fa fa-circle-o" aria-hidden="true" ></i></td>
-                    <td><i class="fa fa-circle-o" aria-hidden="true" ></i></td>
-                </tr>
-                <tr>
-                    <td>Company Overall</td>
-                    <td><i class="fa fa-circle-o" aria-hidden="true" ></i></td>
-                    <td><i class="fa fa-circle-o" aria-hidden="true" ></i></td>
-                    <td><i class="fa fa-circle-o" aria-hidden="true" ></i></td>
-                    <td><i class="fa fa-circle-o" aria-hidden="true" ></i></td>
-                    <td><i class="fa fa-circle-o" aria-hidden="true" ></i></td>
-                </tr>
-            </table><br>
-            <b>How likely are you to</b><span class="main">*</span>
-            <table width="100%" height="120px">
-                <tr>
-                    <td></td>
-                    <td>Very Unlikely</td>
-                    <td>Unlikely</td>
-                    <td>Neutral</td>
-                    <td>likely</td>
-                    <td>Very Likely</td>
-                </tr>
-                <tr>
-                    <td>Buy from us again</td>
-                    <td><i class="fa fa-circle-o" aria-hidden="true" ></i></td>
-                    <td><i class="fa fa-circle-o" aria-hidden="true" ></i></td>
-                    <td><i class="fa fa-circle-o" aria-hidden="true" ></i></td>
-                    <td><i class="fa fa-circle-o" aria-hidden="true" ></i></td>
-                    <td><i class="fa fa-circle-o" aria-hidden="true" ></i></td>
-                </tr>
-                <tr>
-                    <td>Recommend our<br> productsto others</td>
-                    <td><i class="fa fa-circle-o" aria-hidden="true" ></i></td>
-                    <td><i class="fa fa-circle-o" aria-hidden="true" ></i></td>
-                    <td><i class="fa fa-circle-o" aria-hidden="true" ></i></td>
-                    <td><i class="fa fa-circle-o" aria-hidden="true" ></i></td>
-                    <td><i class="fa fa-circle-o" aria-hidden="true" ></i></td>
-                </tr>
-                <tr>
-                    <td>Recommend our<br> Company to others</td>
-                    <td><i class="fa fa-circle-o" aria-hidden="true" ></i></td>
-                    <td><i class="fa fa-circle-o" aria-hidden="true" ></i></td>
-                    <td><i class="fa fa-circle-o" aria-hidden="true" ></i></td>
-                    <td><i class="fa fa-circle-o" aria-hidden="true" ></i></td>
-                    <td><i class="fa fa-circle-o" aria-hidden="true" ></i></td>
-                </tr>
-            </table><br>
-           <b>Additional comments or suggestions</b><br>
-           <textarea ></textarea><br>
-           <input type="button" value="Submit" style="padding-left:15px; padding-top:10px;padding-right:15px; padding-bottom:10px; ">
-
-           
         </div>
     </div>
-</form>
 </body>
-
 </html>
