--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
         integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
+    <!-- A Container class is created -->
     <div class="container" style=" width:100%; padding-left:200px; padding-top:50px; padding-bottom:50px;">
+        <!-- center page with backgroung white is created with alignment -->
         <div class="row"
             style="background-color: white; border:3px; width:750px; height:950px; padding-left:15px; padding-right:15px; ">
             <br>
@@ -26,6 +29,7 @@
                 <label for="email" style="padding-top:10px;"><b>Email</b><span class="main">*</span></label><br>
                 <input type="email" name="" id="email" style="padding-right:200px;"><br><br>
                 <label for="experience"><b>Your Experience</b><span class="main">*</span></label><br>
+                <!-- setting the color using "color" class name to the star -->
                 <div class="color" style="padding-top:5px;">
                     <i class="fa fa-star fa-2x" aria-hidden="true" style="padding-right:5px;"></i>
                     <i class="fa fa-star fa-2x" aria-hidden="true" style="padding-right:5px;"></i>
@@ -35,6 +39,7 @@
                 </div>
                 <p>Overall,How would you rate your experience with us?</p>
                 <b>How satisfied are you with</b><span class="main">*</span>
+                <!-- Table is created with rows and colums -->
                 <table width="100%" height="120px">
                     <tr>
                         <td></td>
@@ -112,4 +117,5 @@
         </div>
     </div>
 </body>
+
 </html>
